fixed form grid spacing

--- a/yacht.html
+++ b/yacht.html
@@ -341,7 +341,7 @@
 
 	<form>
 		<div class="grid-container full">
-			<div class="grid-x">
+			<div class="grid-x grid-margin-x">
 				<div class="medium-4 cell">
 					<label>First Name:
 						<input type="text" placeholder="First name">
