added card sections, removed section tag padding classes as now set in base

--- a/home.html
+++ b/home.html
@@ -177,34 +177,77 @@
 <div class="grid-container">
   <div class="grid-x grid-padding-x">
     <div class="large-12 cell">
-    
-      <section class="section-cta-inline padding-bottom-3">
-        <div class="grid-x content feature-box">
-          <div class="medium-9 cell cell-center">
-            <p>Receive a personalized proposal with boat, cost and extra options as applicable.</p>
-          </div>
-          <div class="medium-3 cell cell-center cell-buttons">
-            <a href="#" class="button secondary">Get in Touch</a>
-          </div>
-        </div>
-      </section>
 
-      <section class="section-reviews padding-bottom-3">
+      <section>
         <div class="content">
           <div class="content-cta text-center">
-            <h3 class="content-cta-title">Lagoon 52 Reviews</h3>
-          </div>
-          <div class="grid-x grid-padding-y grid-margin-x">
-            <blockquote class="large-6 cell">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-              <cite>John Smith</cite>
-            </blockquote>
-            <blockquote class="large-6 cell">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-              <cite>John Smith</cite>
-            </blockquote>
-          </div>
-        </div>
+						<h3 class="content-cta-title">Bareboat and Crewed Yacht Charter Specialists</h3>
+						<p>At Sail Connections we are all specialists in arranging bareboat and fully crewed yacht charter vacations. Each of us has years of sailboat experience, and a deep understanding of the charter boat holiday business. Take a look at our destinations, and let us send you to any one of the very best sailing destinations across the globe.</p>
+					</div>
+					<hr>
+					<ul class="list-unstyled list-column list-column-2 list-column-features">
+						<li>Matching any competitive offer</li>
+						<li>Sourcing boats with discounts available</li>
+						<li>Personalising our proposal just for you</li>
+						<li>Qualifying the operator as well as the boat</li>
+						<li>Advising without bias based on 25+ years of experience</li>
+						<li>We do more than just book yachts!</li>
+					</ul>
+					<hr>
+					<p class="text-center"><b>We will match any discount website offer on charter boat price, and still provide our customary high level of service.</b></p>
+
+					<div class="card-list">
+
+						<div class="card">
+							<a href="#">
+								<div class="card-image">
+									<img src="img/card-img-xl.jpg">
+								</div>
+								<div class="card-section">
+									<h3 class="card-title">Free Charter Guide</h3>
+								</div>
+							</a>
+						</div>
+
+						<div class="card">
+							<a href="#">
+								<div class="card-image">
+									<img src="img/card-img-xl.jpg">
+								</div>
+								<div class="card-section">
+									<h3 class="card-title">Yacht Charter Price Guide</h3>
+								</div>
+							</a>
+						</div>
+
+						<div class="card">
+							<a href="#">
+								<div class="card-image">
+									<img src="img/card-img-xl.jpg">
+								</div>
+								<div class="card-section">
+									<h3 class="card-title">Seven Search Service</h3>
+								</div>
+							</a>
+						</div>
+
+						<div class="card">
+							<a href="#">
+								<div class="card-image"><img src="img/card-img-xl.jpg"></div>
+								<div class="card-section">
+									<h3 class="card-title">Free Charter Guide</h3>
+								</div>
+							</a>
+						</div>
+
+					</div>
+
+					<p class="text-center"><b>We will match any discount website offer on charter boat price, and still provide our customary high level of service.</b></p>
+					<p class="text-center">Planning your bareboat sailing holiday with Sail Connections saves you time and money, while giving you total peace of mind. We will help you create a sailing holiday itinerary that fits all your needs, including your budget.</p>
+					<p class="text-center">For your next sailing holiday adventure, we have the largest portfolio of quality catamarans and yachts available to choose from. Year after year our satisfied clients from all around the world return to charter their next bareboat vacation with us. Prepare to be amazed at the destinations on offer, all fabulous places we are familiar with and can recommend with confidence.</p>
+					<p class="text-center">Putting you on the right boat for you at the best time of year in the sailing holiday destination of your dreams.</p>
+
+				</div>
       </section>
 
     </div><!-- large-12 cell -->
@@ -216,62 +259,95 @@
     <div class="grid-x grid-padding-x">
       <div class="large-12 cell">
         <div class="content">
+
           <div class="content-cta text-center">
             <h3 class="content-cta-title">Featured Yacht Charter Destinations</h3>
 					</div>
-				</div>
+					<div class="card-list card-list-md-2 card-list-lg-4">
+						<div class="card">
+							<a href="#">
+								<div class="card-image">
+									<img src="img/card-img-xl.jpg">
+								</div>
+								<div class="card-section">
+									<h3 class="card-title">Southern Dalmatian Islands</h3>
+								</div>
+							</a>
+						</div>
+						<div class="card">
+							<a href="#">
+								<div class="card-image">
+									<img src="img/card-img-xl.jpg">
+								</div>
+								<div class="card-section">
+									<h3 class="card-title">Southern Dalmatian Islands</h3>
+								</div>
+							</a>
+						</div>
+						<div class="card">
+							<a href="#">
+								<div class="card-image">
+									<img src="img/card-img-xl.jpg">
+								</div>
+								<div class="card-section">
+									<h3 class="card-title">Southern Dalmatian Islands</h3>
+								</div>
+							</a>
+						</div>
+						<div class="card">
+							<a href="#">
+								<div class="card-image">
+									<img src="img/card-img-xl.jpg">
+								</div>
+								<div class="card-section">
+									<h3 class="card-title">Southern Dalmatian Islands</h3>
+								</div>
+							</a>
+						</div>
+						<div class="card">
+							<a href="#">
+								<div class="card-image">
+									<img src="img/card-img-xl.jpg">
+								</div>
+								<div class="card-section">
+									<h3 class="card-title">Southern Dalmatian Islands</h3>
+								</div>
+							</a>
+						</div>
+						<div class="card">
+							<a href="#">
+								<div class="card-image">
+									<img src="img/card-img-xl.jpg">
+								</div>
+								<div class="card-section">
+									<h3 class="card-title">Southern Dalmatian Islands</h3>
+								</div>
+							</a>
+						</div>
+						<div class="card">
+							<a href="#">
+								<div class="card-image">
+									<img src="img/card-img-xl.jpg">
+								</div>
+								<div class="card-section">
+									<h3 class="card-title">Southern Dalmatian Islands</h3>
+								</div>
+							</a>
+						</div>
+						<div class="card">
+							<a href="#">
+								<div class="card-image">
+									<img src="img/card-img-xl.jpg">
+								</div>
+								<div class="card-section">
+									<h3 class="card-title">Southern Dalmatian Islands</h3>
+								</div>
+							</a>
+						</div>
+					</div>
+
+				</div><!-- content -->
 			</div><!-- large-12 cell -->
-
-			<div class="large-4 cell">
-				<div class="card">
-					<img src="assets/img/generic/rectangle-1.jpg">
-					<div class="card-section">
-						<h4>Southern Dalmatian Islands</h4>
-					</div>
-				</div>
-			</div>
-			<div class="large-4 cell">
-				<div class="card">
-					<img src="assets/img/generic/rectangle-1.jpg">
-					<div class="card-section">
-						<h4>Kornati Islands &amp; Zadar</h4>
-					</div>
-				</div>
-			</div>
-			<div class="large-4 cell">
-				<div class="card">
-					<img src="assets/img/generic/rectangle-1.jpg">
-					<div class="card-section">
-						<h4>Istria &amp; Northern Adriatic</h4>
-					</div>
-				</div>
-			</div>
-			<div class="large-4 cell">
-				<div class="card">
-					<a href="#">
-					<img src="assets/img/generic/rectangle-1.jpg">
-					<div class="card-section">
-						<h4>Southern Dalmatian Islands</h4>
-					</div></a>
-				</div>
-			</div>
-			<div class="large-4 cell">
-				<div class="card">
-					<img src="assets/img/generic/rectangle-1.jpg">
-					<div class="card-section">
-						<h4>Kornati Islands &amp; Zadar</h4>
-					</div>
-				</div>
-			</div>
-			<div class="large-4 cell">
-				<div class="card">
-					<img src="assets/img/generic/rectangle-1.jpg">
-					<div class="card-section">
-						<h4>Istria &amp; Northern Adriatic</h4>
-					</div>
-				</div>
-			</div>
-
     </div><!-- grid-x grid-padding-x -->
   </div><!-- grid-container -->
 </section>
