--- a/yacht.html
+++ b/yacht.html
@@ -122,99 +122,98 @@
 </header>
 
 <section class="hero">
-  <div class="grid-container">
-    <div class="grid-x">
-      <div class="cell">
-        <div class="content">
-          <div class="hero-title-wrap">
-            <h1 class="hero-title">Lagoon 52</h1>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+	<div class="grid-container">
+		<div class="grid-x">
+			<div class="cell">
+				<div class="content">
+					<div class="hero-title-wrap">
+						<h1 class="hero-title">Lagoon 52</h1>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </section>
 
 <div class="grid-container">
-  <div class="grid-x grid-padding-x">
-    <div class="large-12 cell">
+	<div class="grid-x grid-padding-x">
+		<div class="large-12 cell">
 
-      <section class="section-page-tabs page-tabs padding-bottom-1">
-        <ul class="tabs" data-active-collapse="true" data-allow-all-closed="true"data-responsive-accordion-tabs="tabs small-accordion medium-accordion large-tabs" id="page-tabs">
-          <li class="tabs-title is-active"><a href="#panelAbout" aria-selected="true">Overview</a></li>
-          <li class="tabs-title"><a href="#panelSpecifications">Specifications</a></li>
-          <li class="tabs-title"><a href="#panelSkipperedOptions">Skippered Options</a></li>
-          <li class="tabs-title"><a href="#paneCrewOptions">Crew Options</a></li>
-        </ul>        
+      <section class="section-page-tabs page-tabs">
+				<ul class="tabs" data-active-collapse="true" data-allow-all-closed="true"data-responsive-accordion-tabs="tabs small-accordion medium-accordion large-tabs" id="page-tabs">
+					<li class="tabs-title is-active"><a href="#panelAbout" aria-selected="true">Overview</a></li>
+					<li class="tabs-title"><a href="#panelSpecifications">Specifications</a></li>
+					<li class="tabs-title"><a href="#panelSkipperedOptions">Skippered Options</a></li>
+					<li class="tabs-title"><a href="#paneCrewOptions">Crew Options</a></li>
+				</ul>
         <div class="tabs-content" data-tabs-content="page-tabs">
-          <div class="tabs-panel is-active" id="panelAbout">
-            <h3 class="tabs-panel-title">Lagoon 52, Bareboat Catamaran Charter</h3>
-            <p>As bareboat sailors have gained confidence, the boats available for charter have increased in size. The Lagoon 52 is one of those newer, high-volume catamarans with performance features that make the whole sailing experience pure luxury that everyone can enjoy in comfort. Good crew quarters make this model equally ideal as a crewed bareboat option. With a knowledgeable skipper and crew aboard, sit back, let someone else do most of the work, and truly relax on your sailing vacation.</p>
-            <div class="content feature-box">
-              <dl class="overview-list">
-                <dt>Length</dt>
-                <dd>52’ (15.8m)</dd>
-                <dt>Charter Type:</dt>
-                <dd>Bareboat</dd>
-                <dt>Guest Max:</dt>
-                <dd>8</dd>
-                <dt>Cabins:</dt>
-                <dd>4</dd>
-              </dl>
-            </div>
+					<div class="tabs-panel is-active" id="panelAbout">
+						<h3 class="tabs-panel-title">Lagoon 52, Bareboat Catamaran Charter</h3>
+						<p>As bareboat sailors have gained confidence, the boats available for charter have increased in size. The Lagoon 52 is one of those newer, high-volume catamarans with performance features that make the whole sailing experience pure luxury that everyone can enjoy in comfort. Good crew quarters make this model equally ideal as a crewed bareboat option. With a knowledgeable skipper and crew aboard, sit back, let someone else do most of the work, and truly relax on your sailing vacation.</p>
+						
+						<div class="content feature-box">
+							<dl class="overview-list">
+								<dt>Length</dt>
+								<dd>52’ (15.8m)</dd>
+								<dt>Charter Type:</dt>
+								<dd>Bareboat</dd>
+								<dt>Guest Max:</dt>
+								<dd>8</dd>
+								<dt>Cabins:</dt>
+								<dd>4</dd>
+							</dl>
+						</div>
 
-            <div class="sc-carousel carousel" data-flickity='{"fullscreen": true, "lazyLoad": 2, "pageDots": false, "cellAlign": "left"}'>
-              <div class="carousel-cell"><img src="/img/banners/hero-sm.jpg" /></div>
-              <div class="carousel-cell"><img src="/img/banners/hero-sm.jpg" /></div>
-              <div class="carousel-cell"><img src="/img/banners/hero-sm.jpg" /></div>
-            </div>
+						<div class="sc-carousel carousel" data-flickity='{"fullscreen": true, "lazyLoad": 2, "pageDots": false, "cellAlign": "left"}'>
+							<div class="carousel-cell"><img src="/img/banners/hero-sm.jpg" /></div>
+							<div class="carousel-cell"><img src="/img/banners/hero-sm.jpg" /></div>
+							<div class="carousel-cell"><img src="/img/banners/hero-sm.jpg" /></div>
+						</div>
 
-            <p>In creating the 52, the people at Lagoon have excelled, making innovative and sometimes radical choices to deliver elegance, comfort, user-friendliness and, it goes without saying, top cruising performance under sail.</p>
-            <p>The Lagoon 52 marks a new era in the design of blue water cruising catamarans. The decision to position the mast further aft adds a wide possibility of sail combinations to an already impressive performance. For over a decade now the Lagoon designers have gradually been moving their masts aft, thus centering weight more evenly and improving performance of the sail plan. The Lagoon 52 was one of the first cruising catamarans to benefit from this development.</p>
-            <p>The main objective in creating the Lagoon 52 has been to improve the use of space. Bright and comfortable living areas suggest a ‘just like home’ feel for guests on board. Use of continuous horizontal lines without interruption gives the interior fluent and harmonious open spaces, while outside the sleek lines bring elegance from stem to stern, with a focus on comfort and safety.</p>
-            <p>The 52F (Flybridge) and 52S (SporTop) distinguish the two above-deck layouts.</p>
-            <p>The Lagoon 52 is available bareboat, crewed bareboat, and in several locations permanently crewed for the ultimate luxury sailing holiday.</p>
+						<p>In creating the 52, the people at Lagoon have excelled, making innovative and sometimes radical choices to deliver elegance, comfort, user-friendliness and, it goes without saying, top cruising performance under sail.</p>
+						<p>The Lagoon 52 marks a new era in the design of blue water cruising catamarans. The decision to position the mast further aft adds a wide possibility of sail combinations to an already impressive performance. For over a decade now the Lagoon designers have gradually been moving their masts aft, thus centering weight more evenly and improving performance of the sail plan. The Lagoon 52 was one of the first cruising catamarans to benefit from this development.</p>
+						<p>The main objective in creating the Lagoon 52 has been to improve the use of space. Bright and comfortable living areas suggest a ‘just like home’ feel for guests on board. Use of continuous horizontal lines without interruption gives the interior fluent and harmonious open spaces, while outside the sleek lines bring elegance from stem to stern, with a focus on comfort and safety.</p>
+						<p>The 52F (Flybridge) and 52S (SporTop) distinguish the two above-deck layouts.</p>
+						<p>The Lagoon 52 is available bareboat, crewed bareboat, and in several locations permanently crewed for the ultimate luxury sailing holiday.</p>
           </div>
-          <div class="tabs-panel" id="panelSpecifications">
-            <h3 class="tabs-panel-title">Specifications</h3>
-            <ul class="spec-list no-bullet">
-              <li>List item</li>
-              <li>List item</li>
-              <li>List item</li>
-              <li>List item</li>
-              <li>List item</li>
-              <li>List item</li>
-              <li>List item</li>
-              <li>List item</li>
-              <li>List item</li>
-              <li>List item</li>
-              <li>List item</li>
-              <li>List item</li>
-            </ul>
-          </div>
-          <div class="tabs-panel" id="panelSkipperedOptions">
-            <h3 class="tabs-panel-title">Skippered Options</h3>
-            <p>three</p>
-          </div>
-          <div class="tabs-panel" id="paneCrewOptions">
-            <h3 class="tabs-panel-title">Crew Options</h3>
-            <p>four</p>
-          </div>
-        </div>
-      </section>
-    
-      <section class="section-cta-inline padding-bottom-1">
-        <div class="grid-x content feature-box">
-          <div class="medium-9 cell cell-center align-middle">
-            <span>Receive a personalized proposal with boat, cost and extra options as applicable.</span>
-          </div>
-          <div class="medium-3 cell cell-center cell-buttons align-middle">
-            <a href="#" class="button secondary">Get in Touch</a>
-          </div>
-        </div>
-      </section>
+					<div class="tabs-panel" id="panelSpecifications">
+						<h3 class="tabs-panel-title">Specifications</h3>
+						<ul class="spec-list no-bullet">
+							<li>List item</li>
+							<li>List item</li>
+							<li>List item</li>
+							<li>List item</li>
+							<li>List item</li>
+							<li>List item</li>
+							<li>List item</li>
+							<li>List item</li>
+							<li>List item</li>
+							<li>List item</li>
+							<li>List item</li>
+							<li>List item</li>
+						</ul>
+					</div>
+					<div class="tabs-panel" id="panelSkipperedOptions">
+						<h3 class="tabs-panel-title">Skippered Options</h3>
+						<p>three</p>
+					</div>
+					<div class="tabs-panel" id="paneCrewOptions">
+						<h3 class="tabs-panel-title">Crew Options</h3>
+						<p>four</p>
+					</div>
+				</div>
+			</section>
+			
+			<div class="grid-x content feature-box section-cta-inline">
+				<div class="medium-9 cell cell-center align-middle">
+					<span>Receive a personalized proposal with boat, cost and extra options as applicable.</span>
+				</div>
+				<div class="medium-3 cell cell-center cell-buttons align-middle">
+					<a href="#" class="button secondary">Get in Touch</a>
+				</div>
+			</div>
 
-      <section class="section-reviews padding-bottom-3">
+      <section class="section-reviews">
         <div class="content">
           <div class="content-cta text-center">
             <h3 class="content-cta-title">Lagoon 52 Reviews</h3>
@@ -245,7 +244,8 @@
           <div class="content-cta text-center">
             <h3 class="content-cta-title">The Sail Connections Guarantee</h3>
             <p>One contact - every option - advice you can trust.</p>
-          </div>
+					</div>
+					<hr>
           <ul class="list-unstyled list-column list-column-2 list-column-features">
             <li>Matching any competitive offer</li>
             <li>Sourcing boats with discounts available</li>
@@ -253,7 +253,8 @@
             <li>Qualifying the operator as well as the boat</li>
             <li>Advising without bias based on 25+ years of experience</li>
             <li>We do more than just book yachts!</li>
-          </ul>
+					</ul>
+					<hr>
           <div class="text-center">
             <p>We will match any discount website offer on charter boat price, and still provide our customary high level of service.</p>
             <a href="#" class="button button-icon-left secondary"><i class="sc-icon-mail" aria-hidden="true"></i> Get in Touch</a>
@@ -291,12 +292,12 @@
         <div class="content text-center">
           <nav>
             <ul class="footer-nav list-unstyled list-inline padding-bottom-1 margin-bottom-2">
-              <li><a href="#">Yachts</a></li>
-              <li><a href="#">Destinations</a></li>
-              <li><a href="#">Our Services</a></li>
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">News</a></li>
-              <li><a href="#">Contact</a></li>
+							<li><a href="#">Yachts</a></li>
+							<li><a href="#">Destinations</a></li>
+							<li><a href="#">Our Services</a></li>
+							<li><a href="#">About Us</a></li>
+							<li><a href="#">News</a></li>
+							<li><a href="#">Contact</a></li>
             </ul>
             <ul class="footer-nav-social list-unstyled list-inline">
               <li>
