removed padding helper classes, changed tab content titles to <h2>, should they be set to this Jan?

--- a/yacht-secondary.html
+++ b/yacht-secondary.html
@@ -139,7 +139,7 @@
   <div class="grid-x grid-padding-x">
     <div class="large-12 cell">
 
-      <section class="section-page-tabs page-tabs padding-bottom-3">
+      <section class="section-page-tabs page-tabs">
         <ul class="tabs" data-active-collapse="true" data-responsive-accordion-tabs="tabs small-accordion medium-tabs large-tabs" id="page-tabs">
           <li class="tabs-title is-active"><a href="#panelAbout" aria-selected="true">Overview</a></li>
           <li class="tabs-title"><a href="#panelSpecifications">Specifications</a></li>
@@ -148,7 +148,7 @@
         </ul>        
         <div class="tabs-content" data-tabs-content="page-tabs">
           <div class="tabs-panel is-active" id="panelAbout">
-            <h3 class="tabs-panel-title">Lagoon 52, Bareboat Catamaran Charter</h3>
+            <h2 class="tabs-panel-title">Lagoon 52, Bareboat Catamaran Charter</h2>
             <p>As bareboat sailors have gained confidence, the boats available for charter have increased in size. The Lagoon 52 is one of those newer, high-volume catamarans with performance features that make the whole sailing experience pure luxury that everyone can enjoy in comfort. Good crew quarters make this model equally ideal as a crewed bareboat option. With a knowledgeable skipper and crew aboard, sit back, let someone else do most of the work, and truly relax on your sailing vacation.</p>
             <div class="content feature-box">
               <dl class="overview-list">
@@ -176,32 +176,30 @@
             <p>The Lagoon 52 is available bareboat, crewed bareboat, and in several locations permanently crewed for the ultimate luxury sailing holiday.</p>
           </div>
           <div class="tabs-panel" id="panelSpecifications">
-            <h3 class="tabs-panel-title">Specifications</h3>
+            <h2 class="tabs-panel-title">Specifications</h2>
             <p>two</p>
           </div>
           <div class="tabs-panel" id="panelSkipperedOptions">
-            <h3 class="tabs-panel-title">Skippered Options</h3>
+            <h2 class="tabs-panel-title">Skippered Options</h2>
             <p>three</p>
           </div>
           <div class="tabs-panel" id="paneCrewOptions">
-            <h3 class="tabs-panel-title">Crew Options</h3>
+            <h2 class="tabs-panel-title">Crew Options</h2>
             <p>four</p>
           </div>
         </div>
       </section>
     
-      <section class="section-cta-inline padding-bottom-3">
-        <div class="grid-x content feature-box">
-          <div class="medium-9 cell cell-center">
-            <p>Receive a personalized proposal with boat, cost and extra options as applicable.</p>
-          </div>
-          <div class="medium-3 cell cell-center cell-buttons">
-            <a href="#" class="button secondary">Get in Touch</a>
-          </div>
-        </div>
-      </section>
+			<div class="grid-x content feature-box section-cta-inline">
+				<div class="medium-9 cell cell-center align-middle">
+					<span>Receive a personalized proposal with boat, cost and extra options as applicable.</span>
+				</div>
+				<div class="medium-3 cell cell-center cell-buttons align-middle">
+					<a href="#" class="button secondary">Get in Touch</a>
+				</div>
+			</div>
 
-      <section class="section-reviews padding-bottom-3">
+      <section class="section-reviews">
         <div class="content">
           <div class="content-cta text-center">
             <h3 class="content-cta-title">Lagoon 52 Reviews</h3>
