added articles section to homepage

--- a/home.html
+++ b/home.html
@@ -352,6 +352,72 @@
   </div><!-- grid-container -->
 </section>
 
+<section class="section-articles section-feature">
+	<div class="grid-container">
+		<div class="grid-x grid-padding-x">
+			<div class="cell">
+
+				<div class="content">
+					<div class="content-cta text-center">
+						<h3 class="content-cta-title">Related Blog Posts</h3>
+					</div>
+					<ul class="article-list list-unstyled">
+						<li class="article-list-item">
+							<div class="article-list-image">
+								<a href="#">
+									<img src="img/card-img-xl.jpg">
+								</a>
+							</div>
+							<div class="article-list-content">
+								<a href="#" class="category-tag">Category</a>
+								<h4 class="article-list-title">
+									<a href="#">A Sailing Holiday in Croatia</a>
+								</h4>
+								<p>Sail Connections’ Robert Cross recently took time out of the office for a two-week sailboat charter in Croatia. Here Robert reports on his sailing holiday adventure aboard a Dufour 350 travelling from Dubrovnik to Split return.</p>
+							</div>
+						</li>
+						<li class="article-list-item">
+							<div class="article-list-image">
+								<a href="#">
+									<img src="img/card-img-xl.jpg">
+								</a>
+							</div>
+							<div class="article-list-content">
+								<a href="#" class="category-tag">Category</a>
+								<h4 class="article-list-title">
+									<a href="#">Chartering a sailboat with crew supplied</a>
+								</h4>
+								<p>A sailboat charter that includes a paid crew means one of two things: crewed bareboat with your party joined by freelance skipper and sometimes cook; or full-service charter on a boat with permanent, professional crew attached.</p>
+							</div>
+						</li>
+						<li class="article-list-item">
+							<div class="article-list-image">
+								<a href="#">
+									<img src="img/card-img-xl.jpg">
+								</a>
+							</div>
+							<div class="article-list-content">
+								<a href="#" class="category-tag">Category</a>
+								<h4 class="article-list-title">
+									<a href="#">Your bareboat charter holiday in Croatia: what will it cost to stay in a marina?</a>
+								</h4>
+								<p>An ideal Croatian boat charter may mean overnighting in a quiet bay.Or perhaps hopping from town to town for fun and excitement. While the bay stopover may be free of charge, marina charges in Croatia can add up.</p>
+							</div>
+						</li>
+					</ul>
+					<div class="content-cta text-center">
+						<a href="#" class="button secondary">View more blog posts</a>
+					</div>
+				</div>
+
+			</div>
+			<!-- large-12 cell -->
+		</div>
+		<!-- grid-x grid-padding-x -->
+	</div>
+	<!-- grid-container -->
+</section>
+
 <section class="section-feature-guide section-feature section-feature-image section-inverse">
   <div class="grid-container">
     <div class="grid-x grid-padding-x">
