wrapped centered content in content-cta div to remove having to repeat center classes on p tags

--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Yacht</title>
+	<title>Home</title>
 	<link rel="stylesheet" href="css/app.css">
 	<link rel="stylesheet" href="node_modules/flickity/dist/flickity.min.css" media="screen">
 	<link rel="stylesheet" href="node_modules/flickity-fullscreen/fullscreen.css" media="screen">
@@ -194,7 +194,9 @@
 						<li>We do more than just book yachts!</li>
 					</ul>
 					<hr>
-					<p class="text-center"><b>We will match any discount website offer on charter boat price, and still provide our customary high level of service.</b></p>
+					<div class="content-cta text-center">
+						<p><b>We will match any discount website offer on charter boat price, and still provide our customary high level of service.</b></p>
+					</div>
 
 					<div class="card-list">
 
@@ -242,10 +244,12 @@
 
 					</div>
 
-					<p class="text-center"><b>We will match any discount website offer on charter boat price, and still provide our customary high level of service.</b></p>
-					<p class="text-center">Planning your bareboat sailing holiday with Sail Connections saves you time and money, while giving you total peace of mind. We will help you create a sailing holiday itinerary that fits all your needs, including your budget.</p>
-					<p class="text-center">For your next sailing holiday adventure, we have the largest portfolio of quality catamarans and yachts available to choose from. Year after year our satisfied clients from all around the world return to charter their next bareboat vacation with us. Prepare to be amazed at the destinations on offer, all fabulous places we are familiar with and can recommend with confidence.</p>
-					<p class="text-center">Putting you on the right boat for you at the best time of year in the sailing holiday destination of your dreams.</p>
+					<div class="content-cta text-center">
+						<p><b>We will match any discount website offer on charter boat price, and still provide our customary high level of service.</b></p>
+						<p>Planning your bareboat sailing holiday with Sail Connections saves you time and money, while giving you total peace of mind. We will help you create a sailing holiday itinerary that fits all your needs, including your budget.</p>
+						<p>For your next sailing holiday adventure, we have the largest portfolio of quality catamarans and yachts available to choose from. Year after year our satisfied clients from all around the world return to charter their next bareboat vacation with us. Prepare to be amazed at the destinations on offer, all fabulous places we are familiar with and can recommend with confidence.</p>
+						<p>Putting you on the right boat for you at the best time of year in the sailing holiday destination of your dreams.</p>
+					</div>
 
 				</div>
       </section>
