wrapped center content in base content-cta div, added destination feature images,

--- a/destination.html
+++ b/destination.html
@@ -154,30 +154,43 @@
           </div>
 					<div class="tabs-panel" id="panelTopSpots">
 						<h2 class="tabs-panel-title">Top Spots</h2>
+						<p>Content...</p>
 					</div>
 					<div class="tabs-panel" id="panelArticles">
 						<h2 class="tabs-panel-title">Articles &amp; Insights</h2>
-						<p>three</p>
+						<p>Content...</p>
 					</div>
 					<div class="tabs-panel" id="panelMap">
 						<h2 class="tabs-panel-title">Map</h2>
-						<p>four</p>
+						<p>Content...</p>
 					</div>
 					<div class="tabs-panel" id="panelFacts">
 						<h2 class="tabs-panel-title">Destination Facts</h2>
-						<p>four</p>
+						<p>Content...</p>
 					</div>
 				</div>
 			</section>
 
-			<hr>
+			<section class="section-collapse">
+				<ul class="grid-x grid-padding-x list-image-grid list-unstyled">
+					<li class="cell medium-4">
+						<img src="./img/destination-feat-1.jpg" />
+					</li>
+					<li class="cell medium-4">
+						<img src="./img/destination-feat-1.jpg" />
+					</li>
+					<li class="cell medium-4">
+						<img src="./img/destination-feat-1.jpg" />
+					</li>
+				</ul>
+			</section>
 
-      <section class="section-explore-more">
-        <div class="content">
-          <div class="content-cta text-center">
-            <h3 class="content-cta-title">Explore more about sailing in Croatia</h3>
-          </div>
-					<div class="card-list">
+			<section>
+				<div class="content">
+					<div class="content-cta text-center">
+						<h3 class="content-cta-title">Explore more about sailing in Croatia</h3>
+					</div>
+					<div class="card-list list-image-grid">
 						<div class="card">
 							<a href="#">
 								<div class="card-image">
@@ -209,15 +222,15 @@
 							</a>
 						</div>
 					</div>
-        </div>
+				</div>
 			</section>
-			
-			<section class="section-browse">
+
+			<section>
 				<div class="content">
 					<div class="content-cta text-center">
 						<h3 class="content-cta-title">Browse our yachts for charter in Croatia</h3>
 					</div>
-					<div class="card-list">
+					<div class="card-list list-image-grid">
 						<div class="card">
 							<a href="#">
 								<div class="card-image">
@@ -250,9 +263,9 @@
 						</div>
 					</div>
 				</div>
-				<section class="section-footer text-center">
+				<div class="content-cta text-center">
 					<a href="#" class="button">View all Yachts in Croatia</a>
-				</section>
+				</div>
 			</section>
 
     </div><!-- large-12 cell -->
@@ -279,7 +292,7 @@
             <li>We do more than just book yachts!</li>
 					</ul>
 					<hr>
-          <div class="text-center">
+					<div class="content-cta text-center">
             <p>We will match any discount website offer on charter boat price, and still provide our customary high level of service.</p>
             <a href="#" class="button button-icon-left secondary"><i class="sc-icon-mail" aria-hidden="true"></i> Get in Touch</a>
           </div>
@@ -290,7 +303,7 @@
   </div><!-- grid-container -->
 </section>
 
-<section class="section-articles section-feature">
+<section class="section-articles">
 	<div class="grid-container">
 		<div class="grid-x grid-padding-x">
 			<div class="cell">
@@ -335,9 +348,9 @@
 							</div>
 						</li>
 					</ul>
-					<section class="section-footer text-center">
+					<div class="content-cta text-center">
 						<a href="#" class="button secondary">View more blog posts</a>
-					</section>
+					</div>
 				</div>
 
 			</div>
