added article feed styles

--- a/yacht.html
+++ b/yacht.html
@@ -255,7 +255,7 @@
             <li>We do more than just book yachts!</li>
 					</ul>
 					<hr>
-          <div class="text-center">
+					<div class="content-cta text-center">
             <p>We will match any discount website offer on charter boat price, and still provide our customary high level of service.</p>
             <a href="#" class="button button-icon-left secondary"><i class="sc-icon-mail" aria-hidden="true"></i> Get in Touch</a>
           </div>
